--- a/assets/css/main1.css
+++ b/assets/css/main1.css
@@ -4024,3 +4024,9 @@ ul#lt11 li{
 	padding-left:20px;
 	padding-right:20px
 }
+@media (max-width: 768px){
+	.car img{
+		padding: 10%;
+		box-sizing: border-box;
+	}
+}
