--- a/assets/css/main1.css
+++ b/assets/css/main1.css
@@ -4026,6 +4026,7 @@ ul#lt11 li{
 }
 @media (max-width: 768px){
 	.car img{
-		padding: 3%;
+ 		padding: 3%;
+                box-sizing: border-box;
 	}
 }
