--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4069,6 +4069,9 @@ ul#lt11 li{
 .sz{
 	font-size: 22px;
 }
+.ss3{
+	margin-right: -10px;
+}
 .h{
 	border: 1px solid green;
 }
@@ -4090,6 +4093,19 @@ ul#lt11 li{
 }
 .slt1:before {
 	margin-top: 220px;
+	margin-right: 15px;
+	content: "\f078";
+	font-family: FontAwesome;
+	position: absolute;
+	z-index: 1;
+	right: 5px;
+	top: 72px;
+}
+.slt2{
+	width: 130px;
+}
+.slt2:before {
+	margin-top: 120px;
 	margin-right: 15px;
 	content: "\f078";
 	font-family: FontAwesome;
@@ -4121,6 +4137,17 @@ ul#lt11 li{
 		top: 45px;
 	}
 	.slt1:before {
+		float: right;
+		margin-top: 120px;
+		margin-right: 15px;
+		content: "\f078";
+		font-family: FontAwesome;
+		position: absolute;
+		z-index: 1;
+		right: 5px;
+		top: 45px;
+	}
+	.slt2:before {
 		float: right;
 		margin-top: 120px;
 		margin-right: 15px;
@@ -4163,10 +4190,16 @@ ul#lt11 li{
 	.slt1:before {
 		margin-top: 110px;
 	}
+	.slt2:before {
+		margin-top: 140px;
+	}
 	.sx{
 		font-size: 14px;
 	}
 	.gyb{
+		display: none;
+	}
+	.sd{
 		display: none;
 	}
 }
