--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3871,28 +3871,6 @@ td {
     background-position-x: right;
     background-position-y: center;
 }
-.select{
-	width:130px;
-  }
-  select{
-	  width: 100%;
-	  height: 40px;
-	  display: block;
-	  appearance: none;
-	  -webkit-appearance: none;
-	  padding: 0 20px;
-	  line-height: 30px;
-  }
-  .select:before {
-	  margin-top: 120px;
-	  margin-right: 15px;
-	  content: "\f078";
-	  font-family: FontAwesome;
-	  position: absolute;
-	  z-index: 1;
-	  right: 5px;
-	  top: 6px;
-  }
   .cn{
 	  box-align: center;
   }
@@ -4075,89 +4053,29 @@ ul#lt11 li{
 .h{
 	border: 1px solid green;
 }
-.slt{
-	width: 130px;
+.choose{
+	padding: 8px 12px !important;
+	color: #333333 !important;
+	background-color : #eeeeee !important;
+	border: 1px solid #dddddd !important;
+	cursor: pointer !important;
+	border-radius: 5px !important;
+	appearance: none !important;
+	-webkit-appearance: none !important;
+	-moz-appearance: none !important;
+	background-image: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="100" height="50"><polygon points="0,0 100,0 50,50" style="fill:%23666666;" /> </svg>') !important;
+	background-position: right 10px top 50% !important;
+	background-repeat: no-repeat !important;
+	background-size: 10px !important;
+	padding-right: 40px !important;
 }
-.slt:before {
-	margin-top: 120px;
-	margin-right: 15px;
-	content: "\f078";
-	font-family: FontAwesome;
-	position: absolute;
-	z-index: 1;
-	right: 5px;
-	top: 72px;
+.choose:focus,
+.choose:hover{
+	outline: none !important;
+	border: 1px solid #bbbbbb !important;
 }
-.slt1{
-	width: 130px;
-}
-.slt1:before {
-	margin-top: 220px;
-	margin-right: 15px;
-	content: "\f078";
-	font-family: FontAwesome;
-	position: absolute;
-	z-index: 1;
-	right: 5px;
-	top: 72px;
-}
-.slt2{
-	width: 130px;
-}
-.slt2:before {
-	margin-top: 120px;
-	margin-right: 15px;
-	content: "\f078";
-	font-family: FontAwesome;
-	position: absolute;
-	z-index: 1;
-	right: 5px;
-	top: 72px;
-}
-@media (max-width:468px){
-	.select:before {
-		margin-top: 120px;
-		margin-right: 15px;
-		content: "\f078";
-		font-family: FontAwesome;
-		position: absolute;
-		z-index: 1;
-		right: 5px;
-		top: 45px;
-	}
-	.slt:before {
-		float: right;
-		margin-top: 120px;
-		margin-right: 15px;
-		content: "\f078";
-		font-family: FontAwesome;
-		position: absolute;
-		z-index: 1;
-		right: 5px;
-		top: 45px;
-	}
-	.slt1:before {
-		float: right;
-		margin-top: 120px;
-		margin-right: 15px;
-		content: "\f078";
-		font-family: FontAwesome;
-		position: absolute;
-		z-index: 1;
-		right: 5px;
-		top: 45px;
-	}
-	.slt2:before {
-		float: right;
-		margin-top: 120px;
-		margin-right: 15px;
-		content: "\f078";
-		font-family: FontAwesome;
-		position: absolute;
-		z-index: 1;
-		right: 5px;
-		top: 45px;
-	}
+.choose option{
+	background :white !important; 
 }
 @media (max-width:768px){
 	.tab12{
@@ -4180,18 +4098,6 @@ ul#lt11 li{
 	}
 	.ss2{
 		float: right;
-	}
-	.select:before{
-		margin-top: 60px;
-	}
-	.slt:before {
-		margin-top: 110px;
-	}
-	.slt1:before {
-		margin-top: 110px;
-	}
-	.slt2:before {
-		margin-top: 140px;
 	}
 	.sx{
 		font-size: 14px;
