--- a/assets/css/main1.css
+++ b/assets/css/main1.css
@@ -3986,6 +3986,75 @@ td {
 	text-decoration: none;
 	cursor: pointer;
   }
+.sq{
+	margin-top: 15px !important;
+}
+.sw{
+	margin-top: -5px;
+}
+.se{
+	margin-top: -7px;
+}
+.sr{
+	margin-top: -4px;
+}
+.st{
+	margin-top: 15px;
+}
+.sy{
+	margin-top: -7px;
+}
+.su{
+	margin-top: -5px;
+}
+.dq{
+	margin-top: 10px;
+}
+.dw{
+	margin-top: -5px;
+}
+.de{
+	margin-top: -3px;
+}
+.dr{
+	margin-top: -9px;
+}
+.dt{
+	margin-top: -6px ;
+}
+.dy{
+	margin-top: -5px;
+}
+.du{
+	margin-top: 12px;
+}
+.di{
+	margin-top: -6px;
+}
+.do{
+	margin-top: -7px;
+}
+.dp{
+	margin-top: -5px;
+}
+.da{
+	margin-top: -6px;
+}
+.fq{
+	margin-top: 12px;
+}
+.fw{
+	margin-top: -8px;
+}
+.fe{
+	margin-top: -6px;
+}
+.fr{
+	margin-top: -6px;
+}
+.ft{
+	margin-top: 15px;
+}  
 /*Modal End Here */
 
 .mc1{
