--- a/assets/css/main1.css
+++ b/assets/css/main1.css
@@ -2766,9 +2766,7 @@
 		border-color: rgba(255, 255, 255, 0.15);
 	}
 
-		table tbody tr:nth-child(2n + 1) {
-			background-color: rgba(255, 255, 255, 0.075);
-		}
+		
 
 	table th {
 		color: #ffffff;
@@ -3019,9 +3017,7 @@
 				border-color: rgba(255, 255, 255, 0.15);
 			}
 
-				.wrapper.style1 table tbody tr:nth-child(2n + 1) {
-					background-color: rgba(255, 255, 255, 0.075);
-				}
+				
 
 			.wrapper.style1 table th {
 				color: #ffffff;
@@ -3231,9 +3227,7 @@
 				border-color: rgba(255, 255, 255, 0.15);
 			}
 
-				.wrapper.style2 table tbody tr:nth-child(2n + 1) {
-					background-color: rgba(255, 255, 255, 0.075);
-				}
+				
 
 			.wrapper.style2 table th {
 				color: #ffffff;
@@ -4099,7 +4093,8 @@ ul#lt11 li{
 .bttn{
 	padding : 0px;
 	padding-left:20px;
-	padding-right:20px
+	padding-right:20px;
+	margin-top: -4px;
 }
 .flt:hover{
 	background: #13013f;
@@ -4141,6 +4136,11 @@ ul#lt11 li{
 }
 .sx{
 	margin-top: -5px;
+}
+.tbl{
+	border: none !important;
+	border-collapse: collapse !important;
+	border-color: #041625 !important;
 }
 @media (max-width: 768px){
 	.tab12{
@@ -4208,6 +4208,12 @@ ul#lt11 li{
 	}
 	.gs{
 		margin-top: -5px;
+	}
+	.wsw{
+		font-size: 28px;
+	}
+	.sws{
+		font-size: 15px;
 	}
 }
 @media (min-width:768px){
