--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4080,6 +4080,22 @@ ul#lt11 li{
 .btttn{
 	padding: 0px;
 }
+.active{
+	background-color: rgba(145, 186, 233, 0.952)!important;
+}
+.butn{
+	margin-left: 5cm;
+
+}
+.bg{
+	border: solid 1px;
+	border-left: 0;
+	border-right: 0;
+}
+.sx{
+	font-size: 18px;
+}
+
 @media (max-width:768px){
 	.tab12{
 		display: none;
@@ -4111,6 +4127,11 @@ ul#lt11 li{
 	.sd{
 		display: none;
 	}
+	.is1{
+		width: 40%;
+		height: auto;
+	}
+	
 }
 @media (min-width:768px){
 	.wrp{
