--- a/assets/css/main1.css
+++ b/assets/css/main1.css
@@ -3890,8 +3890,10 @@ td {
   margin-left: 50px;
 }
 .vl4{
+	margin-left: 150px !important;
+	margin-right: 90px;
 	border-left: 1px solid rgb(109, 109, 109);
-  height: 380px;
+  height: 500px;
   margin-left: 20px;
 }
 .vl9{
